[project]
name = "blackbox"
version = "0.1.0"
description = "blackbox using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "blinker==1.7.0",
    "crewai[tools]>=0.86.0",
    "selenium>=4.31.0",
    "selenium-wire>=5.1.0",
]

[project.scripts]
blackbox = "blackbox.main:run"
run_crew = "blackbox.main:run"
train = "blackbox.main:train"
replay = "blackbox.main:replay"
test = "blackbox.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
